--- a/user-agreement.html
+++ b/user-agreement.html
@@ -1,43 +1,76 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>基准领航 用户协议</title>
+    <title>基准领航用户协议</title>
+    <style>
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; line-height: 1.6; margin: 0; padding: 20px; background-color: #f8f9fa; color: #343a40; }
+        .container { max-width: 800px; margin: 20px auto; padding: 25px; background-color: #ffffff; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.08); }
+        h1, h2 { color: #007bff; text-align: center; }
+        h1 { font-size: 1.8em; margin-bottom: 20px; }
+        h2 { font-size: 1.4em; margin-top: 30px; margin-bottom: 15px; border-bottom: 1px solid #eee; padding-bottom: 5px;}
+        p, li { font-size: 1em; color: #495057; margin-bottom: 10px; }
+        ul { padding-left: 20px; }
+        a { color: #007bff; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        .footer { text-align: center; margin-top: 40px; padding-top: 20px; border-top: 1px solid #dee2e6; font-size: 0.9em; color: #6c757d; }
+        strong { color: #28a745; }
+    </style>
 </head>
-<body style="font-family: sans-serif; max-width: 800px; margin: auto; padding: 20px;">
-    <h1>基准领航 用户协议</h1>
-    <p>欢迎使用 基准领航 应用（以下简称“本应用”），本用户协议由 深圳市基准领航科技有限公司 制定。本协议旨在明确您在使用本应用时的权利和义务。</p>
+<body>
+    <div class="container">
+        <h1>基准领航用户协议</h1>
+        <p>生效日期：2025年05月15日</p>
 
-    <h2>一、使用须知</h2>
-    <ul>
-        <li>您必须年满18岁或具有完全民事行为能力。</li>
-        <li>您使用本应用即表示同意本协议内容。</li>
-    </ul>
+        <h2>一、导言</h2>
+        <p>欢迎使用"基准领航"应用程序（以下简称"本应用"）。本应用是一款专为中国大陆用户设计的基金/ETF信息查询工具，并集成AI智能助手功能。本协议是您与本应用运营方深圳市基准领航科技有限公司（以下简称"我们"）之间关于下载、安装、使用本应用所订立的协议。</p>
+        <p><strong>请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款。</strong>一旦您下载、安装、注册、登录或使用本应用，即表示您已阅读并同意接受本协议各项条款的约束。</p>
 
-    <h2>二、服务内容</h2>
-    <p>本应用提供基金和 ETF 信息查询、AI 问答交互、用户收藏等服务。所有服务均基于公开数据或第三方模型生成，不构成具体投资建议。</p>
+        <h2>二、服务内容</h2>
+        <p>本应用提供以下核心服务：</p>
+        <ul>
+            <li><strong>基金/ETF信息查询：</strong> 提供公开市场基金及ETF产品的基本信息、历史业绩、费率、持仓等数据的查询与展示。</li>
+            <li><strong>AI智能助手：</strong> 用户可以通过自然语言与AI助手进行互动，获取基金相关信息、市场分析（仅供参考）以及应用使用指引。</li>
+            <li><strong>自选列表与AI配置：</strong> 用户可以将感兴趣的基金产品加入自选列表进行跟踪，并可保存由AI生成的投资组合配置建议。</li>
+            <li><strong>用户偏好设置：</strong> 用户可以设置其投资目标、风险偏好等信息，以获取更个性化的AI配置建议。</li>
+        </ul>
+        <p>我们保留根据业务发展需要调整服务内容的权利，任何调整将尽可能通过公告等形式提前通知用户。</p>
 
-    <h2>三、用户行为规范</h2>
-    <ul>
-        <li>不得利用本应用进行任何违法违规活动。</li>
-        <li>不得上传、发布、传播违法、骚扰、歧视、暴力等不当内容。</li>
-    </ul>
+        <h2>三、用户行为规范</h2>
+        <p>您在使用本应用时，应遵守中华人民共和国相关法律法规，并同意不会利用本服务进行任何违法或不正当的活动，包括但不限于：</p>
+        <ul>
+            <li>发布、传送、传播、储存违反国家法律、危害国家安全统一、社会稳定、公序良俗、社会公德以及任何不当、侮辱诽谤、淫秽、暴力内容的信​​息；</li>
+            <li>侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的行为；</li>
+            <li>进行任何危害计算机网络安全的行为。</li>
+        </ul>
 
-    <h2>四、知识产权</h2>
-    <p>本应用中的所有内容、界面设计、技术实现均属于 深圳市基准领航科技有限公司 所有，未经授权不得转载、复制或使用。</p>
+        <h2>四、账户与认证</h2>
+        <p>本应用使用基于手机号码的认证方式，通过腾讯云开发（TCB）提供的认证服务完成注册和登录。您应对您的账户信息（包括手机号码、验证码）的保密性负责，并对您账户下的所有活动承担责任。</p>
 
-    <h2>五、免责声明</h2>
-    <p>本应用中的基金数据和 AI 回答为信息参考用途，非投资建议。因使用本应用而产生的任何损失，由用户自行承担。</p>
+        <h2>五、隐私保护</h2>
+        <p>我们高度重视您的个人信息保护。关于我们如何收集、使用、存储和保护您的个人信息，以及您的相关权利，请查阅<a href="privacy.html">《基准领航隐私政策》</a>。该隐私政策是本协议不可分割的一部分。</p>
 
-    <h2>六、协议变更</h2>
-    <p>深圳市基准领航科技有限公司 有权随时更新本协议并公示，您继续使用本应用即视为接受变更。</p>
+        <h2>六、知识产权</h2>
+        <p>本应用所包含的文字、图片、图表、界面设计、数据等内容的知识产权（包括但不限于著作权、商标权、专利权）归深圳市基准领航科技有限公司所有或已获得合法授权。未经我们书面许可，您不得以任何形式复制、传播、展示、镜像、上载、下载或以其他方式侵犯我们的知识产权。</p>
 
-    <h2>七、联系方式</h2>
-    <p>如有任何问题，请联系：<a href="mailto:jzlh.application@gmail.com">jzlh.application@gmail.com</a></p>
+        <h2>七、免责声明</h2>
+        <ul>
+            <li>本应用提供的信息（包括但不限于基金数据、AI生成的回答和投资组合建议）<strong>均仅供参考，不构成任何形式的投资建议、财务建议、法律建议或其他专业意见</strong>。您应基于独立判断做出决策，并自行承担相应风险。我们不对因依赖本应用信息所造成的任何损失负责。</li>
+            <li>AI助手生成的内容基于大语言模型，我们已尽力确保其信息的及时性和准确性，但不能保证所有信息的绝对准确和完整。</li>
+            <li>由于不可抗力、系统维护、网络故障、第三方服务（如腾讯云服务、AI模型服务）中断等原因导致的服务中断或数据丢失，我们在法律允许的范围内免除责任。</li>
+        </ul>
 
-    <hr>
-    <p style="text-align: center;">© 深圳市基准领航科技有限公司</p>
+        <h2>八、协议的变更与终止</h2>
+        <p>我们有权根据需要不时地制订、修改本协议及/或各类规则，并以在本应用内公示的方式进行变更公告，无需另行单独通知您。变更后的协议和规则一经发布，立即生效。若您在前述变更公告后继续使用本应用，即表示您已经充分阅读、理解并接受修改后的协议和规则内容。</p>
+        <p>我们有权根据自身经营状况，在提前通知的情况下，中断或终止向您提供本协议项下的服务。</p>
+        
+        <h2>九、联系我们</h2>
+        <p>如果您对本协议或本应用有任何疑问、评论或建议，请通过应用内提供的联系方式或以下邮箱与我们联系：<a href="mailto:jzlh.application@gmail.com">jzlh.application@gmail.com</a></p>
+
+        <div class="footer">
+            <p>&copy; 2025 深圳市基准领航科技有限公司. 保留所有权利.</p>
+        </div>
+    </div>
 </body>
 </html>
