--- a/compliance.html
+++ b/compliance.html
@@ -1,87 +1,76 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>基准领航 合规信息页面</title>
+    <title>合规文件 - 基准领航</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #2c3e50;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .list-container {
+            list-style: none;
+            padding: 0;
+        }
+        .list-container li {
+            background-color: #f9f9f9;
+            border: 1px solid #eee;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .list-container li:hover {
+            background-color: #f0f0f0;
+        }
+        .list-container a {
+            text-decoration: none;
+            color: #3498db;
+            font-size: 1.1em;
+            display: block;
+        }
+        .list-container a:hover {
+            color: #2980b9;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            padding-top: 15px;
+            border-top: 1px solid #eee;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
 </head>
-<body style="font-family: sans-serif; max-width: 900px; margin: auto; padding: 30px; line-height: 1.6;">
-    <h1 style="text-align: center;">基准领航 合规信息总览</h1>
-    <p style="text-align: center;">由 深圳市基准领航科技有限公司 提供服务</p>
-
-    <hr>
-    <h2>📋 目录导航</h2>
-    <ul>
-        <li><a href="#privacy">1. 隐私政策</a></li>
-        <li><a href="#user-agreement">2. 用户协议</a></li>
-        <li><a href="#ai-disclaimer">3. AI 使用说明与免责声明</a></li>
-    </ul>
-    <hr>
-
-    <h2 id="privacy">1. 隐私政策</h2>
-    <p>发布日期：2025年05月11日</p>
-    <p>本隐私政策旨在说明 基准领航（由 深圳市基准领航科技有限公司 开发与运营）如何收集、使用、存储和保护您的个人信息。</p>
-    <h3>收集的信息包括：</h3>
-    <ul>
-        <li>基金和 ETF 查询记录</li>
-        <li>您收藏的基金或投资品种</li>
-        <li>与 AI 对话中输入的文本内容（用于模型优化）</li>
-    </ul>
-    <h3>用途：</h3>
-    <ul>
-        <li>提供个性化查询与展示体验</li>
-        <li>提升 AI 质量（匿名训练）</li>
-        <li>保障服务安全与稳定</li>
-    </ul>
-    <h3>数据存储与安全：</h3>
-    <p>我们使用腾讯云数据库，遵守中国相关法规，采取合理技术手段防止数据泄露。</p>
-    <h3>用户权利：</h3>
-    <p>用户可随时联系 <a href="mailto:jzlh.application@gmail.com">jzlh.application@gmail.com</a> 申请查看、更正或删除个人信息。</p>
-    <h3>第三方服务说明：</h3>
-    <p>本应用使用 DeepSeek R1 AI 模型作为服务支撑。</p>
-
-    <hr>
-    <h2 id="user-agreement">2. 用户协议</h2>
-    <p>欢迎使用 基准领航 应用，本协议旨在明确您在使用本应用时的权利与义务。</p>
-    <h3>使用须知</h3>
-    <ul>
-        <li>用户需年满18岁或具完全民事行为能力。</li>
-        <li>使用本应用即视为接受本协议全部内容。</li>
-    </ul>
-    <h3>服务内容</h3>
-    <p>本应用提供基金/ETF 查询、AI 问答、收藏功能。所有内容为信息展示，不构成投资建议。</p>
-    <h3>用户行为规范</h3>
-    <ul>
-        <li>不得用于任何违法用途</li>
-        <li>不得传播违法、攻击性、不实内容</li>
-    </ul>
-    <h3>知识产权声明</h3>
-    <p>本 App 所有设计、数据与内容归 深圳市基准领航科技有限公司 所有，未经授权禁止转载或复制。</p>
-    <h3>免责声明</h3>
-    <p>所有内容仅供参考，用户应自行承担使用风险。</p>
-    <h3>联系方式</h3>
-    <p><a href="mailto:jzlh.application@gmail.com">jzlh.application@gmail.com</a></p>
-
-    <hr>
-    <h2 id="ai-disclaimer">3. AI 使用说明与免责声明</h2>
-    <p>基准领航 应用中集成 DeepSeek R1 大语言模型，用于自然语言交互。</p>
-    <h3>使用范围</h3>
-    <ul>
-        <li>可查询基金/ETF、投资概念、导航说明</li>
-        <li>内容自动生成，不保证准确性</li>
-    </ul>
-    <h3>免责声明</h3>
-    <p>AI 生成内容不构成投资建议或任何法律、医疗指导。</p>
-    <h3>内容合规机制</h3>
-    <ul>
-        <li>已集成敏感词过滤机制</li>
-        <li>用户可通过 <a href="mailto:jzlh.application@gmail.com">jzlh.application@gmail.com</a> 举报不当内容</li>
-    </ul>
-    <h3>聊天数据使用</h3>
-    <p>AI 聊天记录经匿名处理后将用于内部模型优化，符合《隐私政策》所列原则。</p>
-
-    <hr>
-    <p style="text-align: center;">© 深圳市基准领航科技有限公司</p>
+<body>
+    <div class="container">
+        <h1>基准领航应用合规文件</h1>
+        <ul class="list-container">
+            <li><a href="user-agreement.html">用户协议</a></li>
+            <li><a href="privacy.html">隐私政策</a></li>
+            <li><a href="ai-disclaimer.html">AI使用声明</a></li>
+        </ul>
+        <div class="footer">
+            <p>&copy; 2025 深圳市基准领航科技有限公司. 保留所有权利.</p>
+        </div>
+    </div>
 </body>
 </html>
